src/test/ui/issues/issue-52213.nll.stderr
error: lifetime may not live long enough
  --> $DIR/issue-52213.rs:3:20
   |
LL | fn transmute_lifetime<'a, 'b, T>(t: &'a (T,)) -> &'b T {
   |                       --  -- lifetime `'b` defined here
   |                       |
   |                       lifetime `'a` defined here
LL |     match (&t,) {
LL |         ((u,),) => u,
   |                    ^ returning this value requires that `'a` must outlive `'b`

error: aborting due to previous error

